--- a/config/database.yml
+++ b/config/database.yml
@@ -1,4 +1,21 @@
-# MySQL. Versions 5.5.8 and up are supported.
+development:
+  adapter: postgresql
+  encoding: unicode
+  database: TouristCamp_development
+  pool: 5
+  username: anastasiakremeneckaa
+  password:
+
+test:
+  adapter: postgresql
+  encoding: unicode
+  database: TouristCamp_test
+  pool: 5
+  username: anastasiakremeneckaa
+  password:
+
+
+  # MySQL. Versions 5.5.8 and up are supported.
 #
 # Install the MySQL driver
 #   gem install mysql2
@@ -9,24 +26,22 @@
 # And be sure to use new-style password hashing:
 #   https://dev.mysql.com/doc/refman/5.7/en/password-hashing.html
 #
-default: &default
-  adapter: mysql2
-  encoding: utf8mb4
-  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  username: root
-  password: 1234567q
-  socket: /tmp/mysql.sock
+#default: &default
+#  adapter: postgresql
+#  pool: <%#= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+#  username: root
+#  password:
 
-development:
-  <<: *default
-  database: TouristCamp_development
+#development:
+#  <<: *default
+#  database: TouristCamp_development
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
-test:
-  <<: *default
-  database: TouristCamp_test
+#test:
+#  <<: *default
+#  database: TouristCamp_test
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -47,8 +62,8 @@ test:
 #   production:
 #     url: <%= ENV['DATABASE_URL'] %>
 #
-production:
-  <<: *default
-  database: TouristCamp_production
-  username: TouristCamp
-  password: <%= ENV['TOURISTCAMP_DATABASE_PASSWORD'] %>
+#production:
+#  <<: *default
+#  database: TouristCamp_production
+#  username: TouristCamp
+#  password: <%#= ENV['TOURISTCAMP_DATABASE_PASSWORD'] %>
