--- a/config/database.yml
+++ b/config/database.yml
@@ -14,6 +14,13 @@ test:
   username: anastasiakremeneckaa
   password:
 
+production:
+  adapter: postgresql
+  encoding: unicode
+  database: TouristCamp_test
+  pool: 5
+  username: anastasiakremeneckaa
+  password:
 
   # MySQL. Versions 5.5.8 and up are supported.
 #
