--- a/config/database.yml
+++ b/config/database.yml
@@ -13,15 +13,9 @@ test:
   <<: *default
   database: TouristCamp_test
 
-
-    production:
-      url: <%= ENV['DATABASE_URL'] %>
-
 production:
   <<: *default
-  database: TouristCamp_production
-  username: TouristCamp
-  password: <%= ENV['TOURISTCAMP_DATABASE_PASSWORD'] %>
+  database: TouristCamp_development
 
 
   # MySQL. Versions 5.5.8 and up are supported.
